# cfmtools

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml  test.yml
python/: pyproject.toml
python/src/cfmtools/: __main__.py  util.py
python/src/cfmtools/cli/: app.py  cli_texts.py
python/src/cfmtools/core/: _cfm_native.pyi  cfm.py
python/src/cfmtools/core/transforms/: big_m.py  trivial_dead_cardinalities.py
python/src/cfmtools/pipeline/: analyze.py  core.py  export.py  load.py  sample.py  transform.py
python/src/cfmtools/plugins/analyze/: feature_tree.py
python/src/cfmtools/plugins/analyze/config_space/: semi_structural_sat.py  structural_dp.py
python/src/cfmtools/plugins/export/: json.py  stdout.py
python/src/cfmtools/plugins/load/: json.py  uvl.py
python/src/cfmtools/plugins/sample/structural/: unisample_bt.py  unisample_ur.py
python/src/cfmtools/plugins/transform/: big_m.py  dead_cardinalities.py
python/src/cfmtools/pluginsystem/: __init__.py  _decorators.py  _registry.py
python/tests/: common.py
python/tests/core/model/: test_cardinality_intervals.py  test_cfm.py  test_feature_containers.py
python/tests/data/models/uvl/fm/invalid/: ctc_1.uvl  ctc_2.uvl  ctc_3.uvl  ctc_4.uvl  ctc_5.uvl  ctc_6.uvl  ctc_7.uvl
python/tests/data/models/uvl/fm/valid/: ctc_1.uvl  ctc_2.uvl  ctc_3.uvl  ctc_4.uvl  ctc_5.uvl  ctc_6.uvl  ctc_7.uvl  table.uvl
python/tests/plugins/analyze/config_space/: test_semi_structural_sat.py
python/tests/plugins/export/: test_json.py
python/tests/plugins/load/: test_json.py  test_uvl_fm_invalid.py  test_uvl_fm_valid.py
rust/: Cargo.toml
rust/cfm-core/: Cargo.toml
rust/cfm-core/src/: lib.rs  test_cfms.rs
rust/cfm-core/src/algorithms/: mod.rs
rust/cfm-core/src/algorithms/general/: sampling.rs
rust/cfm-core/src/algorithms/structural/: mod.rs  sampling.rs  summary.rs
rust/cfm-core/src/benchmarks/: mod.rs  structural.rs
rust/cfm-core/src/combinatorics/: binomial.rs  combination.rs  mod.rs  multiset.rs
rust/cfm-core/src/config_spaces/: mod.rs  traits.rs
rust/cfm-core/src/config_spaces/instance/: config.rs  mod.rs
rust/cfm-core/src/config_spaces/instance/config/: builder.rs
rust/cfm-core/src/config_spaces/structural/: config.rs  mod.rs  space.rs
rust/cfm-core/src/config_spaces/structural/config/: builder.rs
rust/cfm-core/src/config_spaces/structural/space/: dp.rs  rank.rs
rust/cfm-core/src/model/: cfm.rs  feature.rs  interval.rs  mod.rs
rust/cfm-core/src/model/cfm/: builder.rs
rust/cfm-core/src/utils/: mod.rs  sampling.rs  sorting.rs
rust/cfm-core/src/utils/data_structures/: index_vec.rs  mod.rs  tree.rs
rust/cfm-core/src/utils/data_structures/tree/: index_tree.rs  summary.rs  traversal.rs
rust/cfm-py/: Cargo.toml
rust/cfm-py/src/: cfm.rs  lib.rs
rust/cfm-py/src/cfm/: convert.rs
