[workspace]
members = ["cfm-core", "cfm-py"]
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["BaumKM"]

[workspace.dependencies]
# Internal
cfm-core = { path = "cfm-core" }

# Third-party deps
rug = { version = "1.28.1", features = ["rand"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = "0.10.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false