[package]
name = "cfm-core"
description = "High-performance combinatorial algorithms for Cardinality Feature Models"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "cfm_core"

[dependencies]
rug = { workspace = true }
num-traits = "0.2.19"
rand = { workspace = true }
rayon = "1.11.0"
serde = { workspace = true }
serde_json = { workspace = true }
statrs = "0.18.0"

